Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4711

Mac: Unexpected tooltip shows when click expand button in watch window.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • Qt Creator 2.3.0
    • Qt Creator 2.2.0
    • Debugger
    • [SDKTestRound6]
      Workstation platform: Mac X OS 10.6.7
      Qt SDK version: v1.1
      Qt Creator Version: Qt Creator 2.1.84 (2.2-rc1) From revision a4c42ea4d9
    • f4c72a97d3498cb148507d6f9d3c8959aeb2afb0

    Description

      Steps:
      1. Go-> preference->Debugger->General, check "use tooltips in main editor when debugging".
      2. Start Debug a Qt Gui application or use the attachments.
      3. Cursor Stay at on arguments "*argv[ ] ".and stick the tooltips in the window. also stick some other tooltips here.
      4. Select" locals and watchers" in watch window,click some expand-button there.

      Actually result:.
      Refer to attached screenshot.
      when click expand button at "ui", there is an Unexpected tooltip shows in the the above window.

      Attachments

        1. DebugLog-Leftpart.txt
          12 kB
          Chen xiaoxue
        2. DebugLog-rigntpart.txt
          295 kB
          Chen xiaoxue
        3. tooltipsShow.jpg
          144 kB
          Chen xiaoxue
        4. untitled43.zip
          3 kB
          Chen xiaoxue
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            chenpxia Chen xiaoxue
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes