Debugger: Suppress ToolTip on Mac

Task-number: QTCREATORBUG-4711